--- a/test-vue/src/assets/main.css
+++ b/test-vue/src/assets/main.css
@@ -1,3 +1,2 @@
 @import './reset.css';
-@import '../../node_modules/primevue/resources/themes/aura-light-green/theme.css'
-
+@import '../../node_modules/primevue/resources/themes/aura-light-green/theme.css';
