--- a/test-vue/src/assets/main.css
+++ b/test-vue/src/assets/main.css
@@ -1,2 +1,3 @@
 @import './reset.css';
 @import '../../node_modules/primevue/resources/themes/aura-light-green/theme.css';
+@import 'primeicons/primeicons.css'
